====================
DOMBuilder CHANGELOG
====================

Version 1.1
===========

Packaged from revision 12 in Subversion.

2008-10-08
----------

- An ``NBSP`` property is now also added to the context object by
  ``DOMBuilder.apply()``, for convenience.

2008-10-07
----------

- Boolean attributes are now only set if they're ``true``. Added items to
  the demo page to demonstrate that you can now create an *explicitly*
  unchecked checkbox and an explicity non-multiple select.

2008-06-22
----------

- Added more IE workarounds for:
  - Creating multiple selects
  - Creating pre-selected radio and checkbox inputs

Version 1.0
===========

Packaged from revision 5 in Subversion.

2008-05-31
----------

- Added support for passing children to element creation function as Arrays.
- Added more robust support for registering event handlers, including
  cross-browser event handling utility methods and context correction for IE
  when the event handler is fired.
- IE detection is now performed once and once only, using conditional
  compilation rather than useragent string inspection.